# QHD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: init_fields_example.py  reconnection_Hesse.py  reconnection_viscous.py  simulation.cfg  simulation.py  smoke.cfg  smoke.py  turbulence.py
include/: Config.hpp  Field.hpp  Grid2D.hpp  HDF5Writer.hpp  HelmholtzSolver.hpp  Physics.hpp  Simulation.hpp  VectorOps.hpp
scripts/: generate_init_from_python.py  make_output_movie.py  read_output.py  render_python_config.py  view_output_slider.py
src/: Config.cpp  Field.cpp  Grid2D.cpp  HDF5Writer.cpp  HelmholtzSolver.cpp  Physics.cpp  Simulation.cpp  VectorOps.cpp  main.cpp
